# dotfiles

./: .Xkeymap  .Xkeymap-for-minila-air-us  .Xkeymap_forHHKLite2  .Xmodmap  .Xresources  .Xresources-ubuntu-mono-at-lubuntu_delete_LXDE  .alacritty.old.yml  .alacritty.toml  .alacritty.yml  .aliasrc  .bash_base  .bash_once  .bashrc  .eclimrc  .fzf.zsh  .gitconfig  .gitconfig.base  .gitignore  .gitmodules  .gorc  .gtkrc-2.0  .gvimrc  .imwheel  .linux.gitconfig  .local.gitconfig  .muttrc  .pryrc  .pythonrc  .ripgreprc  .rubyrc  .screenrc  .tigrc  .tmux.conf  .vimrc  .vimrc-mini  .vimrc-n  .xinitrc  .xmobarrc  .xprofile  .xsession  (+34 more)
.emacs.d/: .gitignore  init.el
.fluxbox/: keys  menu
.i3/: config
.vim/: .gitignore
AI/: general-instruction.md
alacritty/: alacritty.toml  alacritty.yml
bigot/: .local.xinitrc  .xinitrc-20250726
bluetooth/autoconnect/: .project-words.txt  Makefile  README.md  cspell.json  pyproject.toml
bluetooth/autoconnect/src/autoconnect/: __init__.py  main.py
claude/: settings.json
completion/: README
conky/: .conkyrc.since2025  .conkyrc1  .conkyrc2  .conkyrc_20110414  .conkyrc_20110611  .conkyrc_20111117  .conkyrc_cinamon  .conkyrc_mini
dunst/: dunstrc
epf/: debian-for-mac.epf  mac-first-day.epf
etc/: sudoers
fcitx/: config
fcitx5/: config  profile  profile_CQqZSg
fish/: config.fish  fish_variables  fishfile
fontconfig/: fonts.conf
ghostty/: config
herdr/: .gitignore  config.toml
i3/: config
labwc/: autostart  environment  menu.xml  rc.xml
lxterminal/: lxterminal.conf
nvim/: .gitignore  (+2 more)
nvim.bigot/: init.vim
(+68 files in other folders)
