[project]
name = "autoconnect"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nobuyasu Tomura", email = "ntomura92@gmail.com" }
]
dependencies = [
    "bleak>=0.22.2",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autoconnect"]
